[gd_scene load_steps=3 format=3 uid="uid://gksavxrlke4t"]

[ext_resource type="Theme" uid="uid://skah0wjpgann" path="res://theme_default.tres" id="1_hj04u"]
[ext_resource type="Script" path="res://scripts/answer_panel.gd" id="2_ugrbf"]

[node name="AnswerPanel" type="PanelContainer"]
custom_minimum_size = Vector2(600, 0)
offset_right = 600.0
theme = ExtResource("1_hj04u")
script = ExtResource("2_ugrbf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AnswerInput" type="LineEdit" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "Think of a number..."
alignment = 1
max_length = 3
context_menu_enabled = false
virtual_keyboard_type = 2
selecting_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="SubmitButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Submit"

[connection signal="text_submitted" from="MarginContainer/HBoxContainer/AnswerInput" to="." method="_on_answer_input_text_submitted"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
